# databricks-assets-bundle-demo

./: README.md  databricks.yml  delivery.yaml  pyproject.toml
job_definitions/: notebook_job_definition.yml  wheel_job_definition.yml
job_sources/notebook_demo/: notebook_job.py
job_sources/python_wheel_demo/: wheel_job.py
